--- a/project_view.html
+++ b/project_view.html
@@ -12,6 +12,7 @@
         input, select { width: 100%; height: 22px; font-size: 12px; font-weight: bold; border: 1px solid #999; text-align: right; box-sizing: border-box; }
         .w-xs { width: 60px !important; }
         .w-sm { width: 90px !important; }
+        .smart-row { display: flex; background: #bdc3c7; padding: 3px; gap: 5px; align-items: center; border-bottom: 1px solid #7f8c8d; }
         .actions { background: #cfcfcf; text-align: center; padding: 4px; display: flex; justify-content: center; gap: 4px; border-bottom: 2px solid #2c3e50; }
         .btn { padding: 3px 8px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-size: 11px; font-weight: bold; }
         .scroll-area { margin-top: 215px; height: calc(100vh - 220px); overflow-y: auto; padding: 5px; }
@@ -55,8 +56,19 @@
             <tr>
                 <td class="w-xs"><span class="field-label">طبعة</span><input type="text" id="edition" class="in"></td>
                 <td><span class="field-label">المجلة</span><input type="text" id="journal" class="in"></td>
+                <td class="w-xs"><span class="field-label">العدد</span><input type="text" id="issue" class="in"></td>
+                <td><span class="field-label">التبعية</span><input type="text" id="affiliation" class="in"></td>
                 <td class="w-sm"><span class="field-label">السنة</span><input type="text" id="year" class="in"></td>
+                <td class="w-sm"><span class="field-label">نوع الوعاء</span><input type="text" id="material_type" class="in"></td>
+                <td class="w-xs"><span class="field-label">الصفحات</span><input type="text" id="pages" class="in"></td>
+            </tr>
+            <tr>
+                <td><span class="field-label">مكان النشر</span><input type="text" id="place" class="in"></td>
+                <td><span class="field-label">الناشر</span><input type="text" id="publisher" class="in"></td>
+                <td><span class="field-label">السلسلة</span><input type="text" id="series" class="in"></td>
                 <td><span class="field-label">العنوان الأصلي</span><input type="text" id="orig_title" class="in"></td>
+                <td><span class="field-label">محقق/مراجعة</span><input type="text" id="editor" class="in"></td>
+                <td><span class="field-label">مترجم معاينة</span><input type="text" id="translator" class="in"></td>
                 <td><span class="field-label">مترجم كشاف</span><input type="text" id="trans_idx" class="in"></td>
             </tr>
         </table>
@@ -66,13 +78,14 @@
             <button type="button" class="btn" style="background:#8e44ad" onclick="openBiblioWindow()">المعاينة</button>
             <button type="button" class="btn" style="background:#2c3e50" onclick="runAuthorIdx()">كشاف المؤلفين</button>
             <button type="button" class="btn" style="background:#c0392b" onclick="runIdx('trans_idx', 'المترجمين')">كشاف المترجمين</button>
+            <button type="button" class="btn" style="background:#16a085" onclick="journalIdx()">المجلات</button>
             <button type="button" class="btn" style="background:#2980b9" onclick="runIdx('subject', 'الموضوعات')">رؤوس الموضوعات</button>
         </div>
     </form>
 </div>
 
 <div id="modalOverlay"><button onclick="closeM()" class="btn" style="background:#c0392b; margin:10px;">إغلاق</button><div class="modal-content" id="modalBody"></div></div>
-<div class="scroll-area"><table class="admin-table"><thead><tr><th style="width:40px;">رقم</th><th>رأس الموضوع</th><th>البيانات</th><th style="width:100px;">إجراء</th></tr></thead><tbody id="adminBody"></tbody></table></div>
+<div class="scroll-area"><table class="admin-table"><thead><tr><th style="width:40px;">رقم</th><th style="width:150px;">رأس الموضوع</th><th>البيانات</th><th style="width:100px;">إجراء</th></tr></thead><tbody id="adminBody"></tbody></table></div>
 
 <script>
 let projs = JSON.parse(localStorage.getItem('L_P')) || ['مشروع_1'];
@@ -86,13 +99,13 @@ function draw() {
     localStorage.setItem('R_' + curP, JSON.stringify(recs));
     localStorage.setItem('L_P', JSON.stringify(projs));
     localStorage.setItem('L_A', curP);
-    const uniqueSubs = [...new Set(recs.map(r => r.subject))].sort((a,b)=>cleanAL(a).localeCompare(cleanAL(b), 'ar'));
+    const uniqueSubs = [...new Set(recs.map(r => r.subject))].filter(x=>x).sort((a,b)=>cleanAL(a).localeCompare(cleanAL(b), 'ar'));
     document.getElementById('subjectsList').innerHTML = uniqueSubs.map(s => `<option value="${s}">`).join('');
     let counter = 1;
     document.getElementById('adminBody').innerHTML = recs.map((r, i) => {
         r.finalID = (r.see || r.see_also) && !r.title ? null : counter++;
-        return `<tr><td>${r.finalID || '-'}</td><td>${r.subject}</td><td>${r.title || ''}</td>
-        <td><button onclick="edit(${i})">تعديل</button><button onclick="deleteRec(${i})">حذف</button></td></tr>`;
+        let info = r.title ? `<b>${r.author || ''}</b> - ${r.title}` : (r.see ? `انظر: ${r.see}` : `انظر أيضاً: ${r.see_also}`);
+        return `<tr><td>${r.finalID || '-'}</td><td>${r.subject}</td><td>${info}</td><td><button onclick="edit(${i})">تعديل</button><button onclick="deleteRec(${i})">حذف</button></td></tr>`;
     }).join('');
     document.getElementById('pSel').innerHTML = projs.map(p=>`<option ${p===curP?'selected':''}>${p}</option>`).join('');
 }
@@ -119,65 +132,14 @@ function openBiblioWindow() {
             if (sa && usedSubjects.has(sa.see_also.trim())) content += `<div class="see-also-line">انظر أيضاً: ${sa.see_also}</div>`;
         }
         if (r.title) {
+            let respParts = [];
+            if(r.author_preview) respParts.push(r.author_preview);
+            if(r.collab) respParts.push(r.collab);
+            let respStr = respParts.join('، ');
+            if(r.translator) respStr += (respStr ? ' ؛ ترجمة ' : 'ترجمة ') + r.translator;
+            if(r.editor) respStr += (respStr ? ' ؛ ' : '') + r.editor;
             let line = `<b>${r.author || ''} (${r.finalID})</b><br>${r.title}`;
-            let tail = ` . ـــ ${[r.place, r.publisher, r.year].filter(x=>x).join(': ')}`;
-            let orig = r.orig_title ? `<span class="orig-title">العنوان الأصلي: ${r.orig_title}</span>` : '';
-            content += `<div class="ent">${line}${tail}.${orig}</div>`;
-        }
-    });
-    win.document.write(content + '</body></html>'); win.document.close();
-}
-
-function splitSlash(str) { return str ? str.split('/').map(s => s.trim()).filter(s => s) : []; }
-
-function runIdx(f, l) {
-    let m = {}; const used = new Set(recs.filter(r => r.title).map(r => r.subject.trim()));
-    recs.forEach(r => { 
-        let rawV = r[f] ? r[f].trim() : '';
-        if (rawV) {
-            let values = (f === 'subject') ? [rawV] : splitSlash(rawV);
-            values.forEach(v => {
-                if (f === 'subject') {
-                    if (r.see && used.has(r.see.trim())) v = `${v} انظر: ${r.see}`;
-                    else if (r.see_also && used.has(r.see_also.trim())) v = `${v} انظر أيضاً: ${r.see_also}`;
-                    else if (!r.title) return;
-                }
-                if(!m[v]) m[v] = []; if(r.finalID && !m[v].includes(r.finalID)) m[v].push(r.finalID);
-            });
-        }
-    });
-    renderIdx(m, l);
-}
-
-function runAuthorIdx() {
-    let m = {};
-    recs.forEach(r => {
-        if (r.finalID) {
-            splitSlash(r.author).concat(splitSlash(r.collab_idx)).forEach(n => {
-                if(!m[n]) m[n]=[]; if(!m[n].includes(r.finalID)) m[n].push(r.finalID);
-            });
-        }
-    });
-    renderIdx(m, "المؤلفين");
-}
-
-function save() { let d = {}; document.querySelectorAll('.in').forEach(i => d[i.id] = i.value.trim()); if(!d.subject) return; if (editIndex > -1) recs[editIndex] = d; else recs.push(d); editIndex = -1; draw(); document.getElementById('bForm').reset(); }
-function edit(i) { editIndex = i; let r = recs[i]; document.querySelectorAll('.in').forEach(inp => inp.value = r[inp.id] || ''); }
-function deleteRec(i) { if(confirm("حذف؟")) { recs.splice(i, 1); draw(); } }
-function closeM() { document.getElementById('modalOverlay').style.display='none'; }
-function renderIdx(m, title) {
-    let k = Object.keys(m).sort((a,b)=>cleanAL(a).localeCompare(cleanAL(b),'ar'));
-    let h = `<h3>كشاف ${title}</h3><div class="column-wrapper">`;
-    k.forEach(x => h += `<div>${x} (${m[x].join(', ')})</div>`);
-    document.getElementById('modalBody').innerHTML = h + `</div>`;
-    document.getElementById('modalOverlay').style.display='block';
-}
-function newP() { let n = prompt("اسم المشروع:"); if(n) { projs.push(n); curP=n; recs=[]; draw(); } }
-function switchP(v) { curP=v; recs=JSON.parse(localStorage.getItem('R_'+v))||[]; draw(); }
-function delP() { if(confirm("حذف؟")) { projs = projs.filter(p=>p!==curP); curP=projs[0]||'مشروع_1'; draw(); } }
-function importX(e) { const reader = new FileReader(); reader.onload = (evt) => { recs = XLSX.utils.sheet_to_json(XLSX.read(evt.target.result, {type:'binary'}).Sheets[XLSX.read(evt.target.result, {type:'binary'}).SheetNames[0]]); draw(); }; reader.readAsBinaryString(e.target.files[0]); }
-function exportX() { XLSX.writeFile(XLSX.utils.book_append_sheet(XLSX.utils.book_new(), XLSX.utils.json_to_sheet(recs), "Data"), `${curP}.xlsx`); }
-window.onload = draw;
-</script>
-</body>
-</html>
+            if(respStr) line += ` / ${respStr} . ـــ `; else line += ` . ـــ `;
+            let biblioTail = r.journal ? `${r.journal} . ـــ ${r.issue || ''} . ـــ ${r.year || ''} . ـــ ص ${r.pages || ''}` : 
+                             `${[r.place, r.publisher, r.year].filter(x=>x).join(': ')} . ـــ ${r.pages || ''} ص`;
+            let origTitleHtml = r.orig_title ? `<span class="orig
